--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="variable_c">Введите c</string>
     <string name="calculate">Вычислить</string>
     <string name="detailed">Подробнее</string>
+    <string name="button_back_to_main">Назад</string>
     <string name="decision">Решение:</string>
     <string name="equation_head">ax^2 + bx + c = 0</string>
+    <string name="formula">D = b * b - 4ac</string>
+    <string name="discriminant">D = </string>
+    <string name="discriminant_error">Поля не должны быть пусты</string>
 </resources>
