--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,6 @@
     <string name="formula">D = b * b - 4ac</string>
     <string name="discriminant">D = </string>
     <string name="discriminant_error">Поля не должны быть пусты</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
